# noise_maker

./: CMakeLists.txt  audio.c  audio.h  input.c  input.h  instrument.c  instrument.h  logging.c  main.c  note.c  note.h  program.c  program.h  renderer.c  renderer.h  vec2f.h
data_structure/: double_pair.h  int64_t_pair.h
src/: audio.c  audio.h  box.c  box.h  constants.h  input.c  input.h  instrument.c  instrument.h  logging.h  main.c  note.c  note.h  program.c  program.h  renderer.c  renderer.h  sound_drawing_canvas.h  vec.c  vec.h
src/data_structure/: int64_t_pair.h
test/: main.c  test_box.h
